# cue

./: .gitignore  README.md  cue.py  cue.spec  cueclient.py  cueserver.py  pyproject.toml  requirements.txt
client/: README.md  cli.py  pyproject.toml
client/faat/cue/: __main__.py  cueclient.py
faat/cue/: __init__.py  __main__.py  cueclient.py  errors.py  keydb.py  keyprovisioning.py  server.py
faat/cue/server/: __init__.py  routing.py
server/: README.md  pyproject.toml  requirements.txt
server/faat/cueserver/: api.py  apikeydb.py  auth.py  csrf.py  db.py  settings.py  validating.py  web.py
server/faat/cueserver/templates/: home.html  index.html  key-removal.html  keyrequest.html  macros.html
server/static/: script.js  styles.css
