[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "faat.cue"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
dependencies = ["requests", "websockets", "yarl"]
dynamic = ["version"]

[project.optional-dependencies]
server = ["starlette", "faat.userdb"]

[project.scripts]
cue = "faat.cue.__main__:main"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "faat.cue.__version__"}
