[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "faat.cueserver"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
dependencies = ["websockets", "starlette", "redis", "jinja2", "itsdangerous", "authlib", "httpx", "python-multipart"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version.attr = "faat.cueserver.__version__"
